--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 url: http://luizgpsantos.github.com
 title: Search Expert
-subtitle: A blogging framework for hackers.
+subtitle: Ou como criar uma plataforma de busca para milhões de usuários 
 author: Luiz Guilherme P. Santos
 simple_search: http://google.com/search
-description:
+description: No meu blog você vai encontrar tudo para criar uma plataforma de busca escalável utilizando o elasticsearch.
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -45,7 +45,9 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides:     [asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+blog_index_asides:  [custom/asides/about.html, asides/recent_posts.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html]
+post_asides:        [custom/asides/about.html, asides/recent_posts.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -72,7 +74,7 @@ twitter_show_follower_count: false
 twitter_tweet_button: true
 
 # Google +1
-google_plus_one: false
+google_plus_one: true
 google_plus_one_size: medium
 
 # Google Plus Profile
@@ -96,4 +98,4 @@ disqus_show_comment_count: false
 google_analytics_tracking_id: UA-37476537-1
 
 # Facebook Like
-facebook_like: false
+facebook_like: true
