Alterando a URL do site.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://luizgpsantos.github.com
+url: http://searchexpert.com.br
 title: Search Expert
 subtitle: Ou como criar uma plataforma de busca para milhões de usuários 
 author: Luiz Guilherme P. Santos
